--- a/style.css
+++ b/style.css
@@ -72,12 +72,7 @@ ul > li:hover {
 }
 
 .results-wrapper {
-    background: rgb(255, 0, 0);
-    background: linear-gradient(
-        0deg,
-        rgba(255, 0, 0, 1) 0%,
-        rgba(200, 0, 0, 1) 100%
-    );
+    background: red;
     border-radius: 20px;
     min-height: 300px;
     /* max-height: 650px; */
