increased sprite size

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ ul > li:hover {
 .sprite-container > img {
     background-color: rgba(128, 128, 128, 0.425);
     border-radius: 50%;
+    width: 120%;
 }
 
 .ellipsis {
